# tbc-lectures-v2

./: .gitignore  pyproject.toml
experiments/: exp1.py
fastapi_dep_injection_test/: __init__.py  main.py
lecture_1/: example_1.py  example_2.py  example_3.py  example_4.py
lecture_10/: example_1.py  example_10.py  example_11.py  example_12.py  example_13.py  example_14.py  example_15.py  example_16.py  example_17.py  example_18.py  example_19.py  example_2.py  example_20.py  example_21.py  example_3.py  example_4.py  example_5.py  example_6.py  example_7.py  example_8.py  example_9.py
lecture_11/: example_1.py  example_10.py  example_11.py  example_12.py  example_13.py  example_2.py  example_3.py  example_4.py  example_4_1.py  example_5.py  example_7.py  example_8.py  example_9.py  previous_1.py
lecture_12/: example_1.py  example_10.py  example_11.py  example_12.py  example_13.py  example_15.py  example_16.py  example_17.py  example_18.py  example_19.py  example_2.py  example_20.py  example_21.py  example_22.py  example_23.py  example_3.py  example_4.py  example_5.py  example_6.py  example_7.py  example_8.py  example_9.py
lecture_13/: example_1.py  example_10.py  example_11.py  example_12.py  example_13.py  example_14.py  example_15.py  example_16.py  example_18.py  example_19.py  example_2.py  example_3.py  example_4.py  example_5.py  example_6.py  example_7.py  example_8.py  example_9.py
lecture_14/: example_1.py  example_10.py  example_11.py  example_12.py  example_13.py  example_14.py  example_15.py  example_2.py  example_3.py  example_4.py  example_5.py  (+4 more)
(+279 files in other folders)
