[tool.poetry]
name = "demo-lecture-v2"
version = "0.1.0"
description = ""
authors = ["Mikheil Lomidze lomidzemikheili@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
memory-profiler = "^0.61.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

