[tool.poetry]
name = "demo-lecture-v2"
version = "0.1.0"
description = ""
authors = ["Mikheil Lomidze lomidzemikheili@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
memory-profiler = "^0.61.0"
sendgrid = "^6.11.0"
selenium = "^4.27.1"
pandas = "^2.2.3"
beautifulsoup4 = "^4.12.3"
openai = "^1.58.1"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

